[package]
name = "boltz-cli"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
boltz = { path = ".." }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
clap = { workspace = true, features = ["derive", "env"] }
anyhow.workspace = true
serde_json.workspace = true
hex.workspace = true
bip39.workspace = true
rustls.workspace = true
