[package]
name = "breez-sdk-itest"
edition = "2024"
version.workspace = true

[lib]
name = "breez_sdk_itest"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bitcoin = { workspace = true, features = ["serde"] }
breez-sdk-spark = { workspace = true, features = ["test-utils"] }
dotenvy.workspace = true
futures.workspace = true
hex.workspace = true
macros.workspace = true
nostr.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["default-tls"] }
rstest.workspace = true
rstest_reuse.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempdir.workspace = true
test-log = { workspace = true, features = ["trace"] }
testcontainers.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid.workspace = true
