[package]
name = "breez-sdk-itest"
edition = "2024"
version.workspace = true

[lib]
name = "breez_sdk_itest"
path = "src/lib.rs"

[dependencies]
# Breez SDK under test (enable test-utils for direct helpers)
breez-sdk-spark = { workspace = true, features = ["test-utils", "postgres"] }
testcontainers-modules = { workspace = true, features = ["postgres"] }

# Async/test stack
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
platform-utils.workspace = true
base64.workspace = true
test-log = { workspace = true, features = ["trace"] }
anyhow.workspace = true

# Utils
bip39.workspace = true
bitcoin = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
macros.workspace = true
tempdir = "0.3.7"
testcontainers.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dotenvy = "0.15.7"
rand.workspace = true
uuid.workspace = true
futures.workspace = true
nostr.workspace = true
warp = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
bech32.workspace = true
