[package]
name = "breez-sdk-itest"
edition = "2024"
version.workspace = true

[lib]
name = "breez_sdk_itest"
path = "src/lib.rs"

[features]
# Compiles the Turnkey signer-backend test cases and harness. The cases need
# TURNKEY_* credentials at runtime and fail without them; leave the feature off
# to exclude them entirely.
turnkey = ["breez-sdk-spark/turnkey", "breez-sdk-spark/turnkey-p256"]
# Compiles the local-operator-cluster tests (unilateral exit) and their harness.
# Each test stands up its own docker operator cluster, so they run only under
# `make itest` (--test-threads=2); off by default keeps them out of the
# high-concurrency `make breez-itest` (--test-threads=8), where 8 concurrent
# clusters starve the runner.
local-itest = []

[dependencies]
# Breez SDK under test (enable test-utils for direct helpers)
breez-sdk-spark = { workspace = true, features = ["test-utils", "sqlite", "postgres", "mysql"] }
breez-sdk-common = { workspace = true }
spark-itest.workspace = true
spark-wallet.workspace = true
testcontainers-modules = { workspace = true, features = ["postgres", "mysql"] }

# PostgreSQL for database creation utilities
tokio-postgres.workspace = true
# MySQL for database creation utilities
mysql_async.workspace = true

# Async/test stack
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
platform-utils.workspace = true
base64.workspace = true
test-log = { workspace = true, features = ["trace"] }
anyhow.workspace = true

# Utils
bip39.workspace = true
bitcoin = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
macros.workspace = true
tempfile = "3"
testcontainers.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dotenvy = "0.15.7"
rand.workspace = true
uuid.workspace = true
futures.workspace = true
axum = "0.7"
bech32.workspace = true

# EVM tooling for the mainnet cross-chain send itests: derive the deterministic
# recipient from the test mnemonic (alloy-signer-local `mnemonic` feature) and
# read ERC-20 balances over JSON-RPC (reqwest). The alloy crates are already in
# the workspace lock via boltz-client; the `mnemonic` feature adds coins-bip39.
alloy-signer-local = { version = "1.8.3", features = ["mnemonic"] }
alloy-primitives = "1.6.0"
reqwest.workspace = true
