[package]
name = "cli"
edition = "2024"
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bip39 = { workspace = true, features = ["rand"] }
bitcoin.workspace = true
breez-sdk-spark = { workspace = true, features = ["postgres"] }
challenge_response = "0.5"
clap = { workspace = true, features = ["derive"] }
dirs.workspace = true
hex.workspace = true
rand.workspace = true
rustyline = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true

[lints]
workspace = true
