[package]
name = "breez-sdk-spark"
edition = "2024"
version.workspace = true

[features]
browser-tests = [] # Enable browser wasm-pack tests
uniffi = [
    "dep:uniffi",
    "openssl-vendored",
]
openssl-vendored = ["openssl"]
test-utils = []

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "breez_sdk_spark"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
bip39.workspace = true
bitcoin.workspace = true
bitflags.workspace = true
breez-sdk-common.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
dotenvy.workspace = true
ecies.workspace = true
figment = { workspace = true, features = ["env", "yaml"] }
hex.workspace = true
lnurl-models.workspace = true
macros.workspace = true
nostr.workspace = true
openssl = { workspace = true, optional = true }
qrcode-rs.workspace = true
reqwest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
shellwords.workspace = true
spark-wallet.workspace = true
tempdir.workspace = true
thiserror.workspace = true
tokio_with_wasm.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid.workspace = true
uniffi = { workspace = true, optional = true }
web-time.workspace = true
x509-parser = { version = "0.16.0" }
semver = "1.0.27"
anyhow.workspace = true
zbase32 = "0.1.2"

# Non-Wasm dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rusqlite.workspace = true
rusqlite_migration.workspace = true

# WASM dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
breez-sdk-common = { workspace = true, features = ["test-utils"] }
breez-sdk-spark = { workspace = true, features = ["test-utils"] }

# WASM dev dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test.workspace = true

[build-dependencies]
built.workspace = true
uniffi = { workspace = true, features = ["build"], optional = true }
