[package]
name = "breez-sdk-spark"
edition = "2024"
version.workspace = true

[features]
browser-tests = ["passkey"]                 # Enable browser wasm-pack tests
uniffi = ["dep:uniffi"]
test-utils = ["spark-wallet/test-utils"]
# Passkey functionality
passkey = ["dep:nostr", "dep:nostr-sdk"]
# PostgreSQL storage backend (optional, for server-side use cases)
postgres = [
    "dep:spark-postgres",
]

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "breez_sdk_spark"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
bip39.workspace = true
bitcoin.workspace = true
bitflags.workspace = true
boltz-client.workspace = true
breez-sdk-common.workspace = true
platform-utils.workspace = true
chrono.workspace = true
utils.workspace = true
flashnet.workspace = true
hex.workspace = true
lnurl-models.workspace = true
macros.workspace = true
nostr = { workspace = true, optional = true }
nostr-sdk = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
spark-postgres = { workspace = true, optional = true }
spark-wallet.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid.workspace = true
uniffi = { workspace = true, optional = true }
x509-cert = { version = "0.2", default-features = false }
anyhow.workspace = true
frost-secp256k1-tr = { workspace = true }
k256 = { workspace = true, features = ["arithmetic"] }

# Non-Wasm dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rusqlite.workspace = true
rusqlite_migration.workspace = true

# WASM dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
breez-sdk-common = { workspace = true, features = ["test-utils"] }
breez-sdk-spark = { workspace = true, features = ["test-utils"] }

# Non-WASM dev dependencies (for PostgreSQL container tests)
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dev-dependencies]
testcontainers.workspace = true
testcontainers-modules = { workspace = true, features = ["postgres"] }
breez-sdk-spark = { workspace = true, features = ["postgres"] }
rcgen.workspace = true

# WASM dev dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test.workspace = true

[build-dependencies]
built.workspace = true
uniffi = { workspace = true, features = ["build"], optional = true }
