[package]
name = "lnurl"
edition = "2024"
version = "0.1.0"

[workspace]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = "0.10.1"
base64 = "0.22.1"
bitcoin = { version = "0.32.7", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
hex = "0.4.3"
lightning-invoice = { version = "0.33.2", features = ["std"] }
lnurl-models = { path = "../lnurl-models" }
nostr = { version = "0.43.1", default-features = false, features = ["std", "nip57"] }
nostr-sdk = { version = "0.43.0", default-features = false, features = ["nip57"] }
rand = "0.8"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.0"
spark = { path = "../../spark", features = ["native-tls"] }
spark-wallet = { path = "../../spark-wallet", features = ["native-tls"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "sqlite", "tls-native-tls"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
tonic = "0.14.2"
tower-http = { version = "0.6.7", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
x509-parser = { version = "0.18.0", features = ["verify"] }

[lints]
clippy.suspicious = { level = "warn", priority = -1 }
clippy.complexity = { level = "warn", priority = -1 }
clippy.perf = { level = "warn", priority = -1 }
clippy.style = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }
clippy.missing_errors_doc = "allow"
clippy.missing_panics_doc = "allow"
clippy.must_use_candidate = "allow"
clippy.struct_field_names = "allow"
clippy.arithmetic_side_effects = "warn"
