[package]
name = "breez-sdk-spark-wasm"
edition = "2024"
version.workspace = true

# Disable wasm-pack's post-build wasm-opt step. wasm-opt is distributed
# via `binaryen` and wasm-pack downloads it on-demand from
# https://github.com/WebAssembly/binaryen/releases — that endpoint
# flakes on busy CI runners / rate-limited IPs and the download
# failure hard-fails the whole wasm build with a confusing
# "failed downloading" message.
#
# Trade-off: slightly larger .wasm outputs (wasm-opt typically
# shaves 10-25%). The `--release` cargo profile still produces
# LLVM-optimized wasm; wasm-opt is incremental peephole work.
# Acceptable for a reference-app consumer profile.
#
# Re-enable once spark-sdk or consumers want the size win back;
# requires pre-installing `binaryen` as a system package in CI
# instead of relying on wasm-pack's runtime fetch.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
browser-tests = [] # Enable browser wasm-pack tests

[lib]
name = "breez_sdk_spark_wasm"
crate-type = ["cdylib"]

[dependencies]
async-trait.workspace = true
bitcoin.workspace = true
breez-sdk-spark = { workspace = true, features = ["passkey"] }
js-sys.workspace = true
macros.workspace = true
platform-utils.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
spark-wallet.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tsify-next = { workspace = true, default-features = false, features = ["js"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
breez-sdk-spark = { workspace = true, features = ["test-utils"] }
