[package]
name = "breez-sdk-spark-wasm"
edition = "2024"
version.workspace = true

# Disable wasm-pack's post-build wasm-opt step. wasm-opt is distributed
# via `binaryen` and wasm-pack downloads it on-demand from
# https://github.com/WebAssembly/binaryen/releases: that endpoint
# flakes on busy CI runners / rate-limited IPs and the download
# failure hard-fails the whole wasm build with a confusing
# "failed downloading" message.
#
# Trade-off: slightly larger .wasm outputs (wasm-opt typically
# shaves 10-25%). The `--release` cargo profile still produces
# LLVM-optimized wasm; wasm-opt is incremental peephole work.
# Acceptable for a reference-app consumer profile.
#
# Re-enable once spark-sdk or consumers want the size win back;
# requires pre-installing `binaryen` as a system package in CI
# instead of relying on wasm-pack's runtime fetch.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["postgres"]
# Postgres backend. Pulls in pg-wasm, whose `module = ".../pg-wasm-bridge.cjs"`
# snippet imports CommonJS pg/node-postgres — fine for Node-target wasm-pack
# builds, but the snippet can't load in a browser. Browser-test runs build
# with `--no-default-features --features browser-tests` to keep this off
# entirely (the snippet only gets linked into the wasm binary when this
# feature pulls in pg-wasm + spark-postgres).
postgres = [
    "breez-sdk-spark/postgres",
    "dep:pg-wasm",
    "dep:spark-postgres",
]
# Enable browser wasm-pack tests. Mutually exclusive with the `postgres`
# feature in practice: the browser bundle can't load the pg-wasm bridge.
browser-tests = []

[lib]
name = "breez_sdk_spark_wasm"
crate-type = ["cdylib"]

[dependencies]
async-trait.workspace = true
bitcoin.workspace = true
breez-sdk-spark = { workspace = true, features = ["passkey"] }
js-sys.workspace = true
macros.workspace = true
platform-utils.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_bytes.workspace = true
spark-wallet.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tsify-next = { workspace = true, default-features = false, features = ["js"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
# Optional, behind `feature = "postgres"`. Tests for the Rust postgres
# path (pg_wasm_rust_storage.rs) also rely on these.
pg-wasm = { workspace = true, optional = true }
spark-postgres = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true
breez-sdk-spark = { workspace = true, features = ["test-utils"] }
